--- a/01_2024 網頁全端開發/0315_1/style/style.scss
+++ b/01_2024 網頁全端開發/0315_1/style/style.scss
@@ -15,40 +15,207 @@ h6 {
   font-weight: normal;
 }
 
-header {
-  background-color: white;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  section.logo {
-    flex: 2 1 400px;
+body {
+  img.fixed-image {
+    min-height: 100vh;
+    position: fixed;
+    width: 100%;
+    z-index: -5;
+    bottom: 0;
+    left: 0;
+  }
+
+  header {
+    background-color: white;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    img {
-      width: 6vw;
-      height: 6vw;
+
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    box-shadow: 0 10px 6px -6px #777;
+
+    section.logo {
+      flex: 2 1 400px;
+      display: flex;
+      align-items: center;
+      img {
+        width: 6vw;
+        height: 6vw;
+      }
+      h1 {
+        font-size: 2.5rem;
+      }
     }
-    h1 {
-      font-size: 2.5rem;
+    nav {
+      flex: 5 1 500px;
+
+      ul {
+        display: flex;
+        list-style-type: none;
+        justify-content: space-around;
+        li {
+          a {
+            text-decoration: none;
+            color: black;
+            font-size: 1.35rem;
+            transition: all 0.2s ease;
+            padding-bottom: 0.3rem;
+            &:hover {
+              color: $themeColor;
+              border-bottom: 3px solid $themeColor;
+            }
+          }
+        }
+      }
     }
   }
-  nav {
-    flex: 5 1 500px;
 
-    ul {
+  main {
+    section.background-img {
+      // 設定背景圖片
+      min-height: 70vh;
+      background-image: url("../images/日本櫻花.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      transition: all 0.75s ease;
+      position: relative;
+      z-index: 0;
       display: flex;
-      list-style-type: none;
-      justify-content: space-around;
-      li {
-        a {
-          text-decoration: none;
-          color: black;
-          font-size: 1.35rem;
-          transition: all 0.2s ease;
-          padding-bottom: 0.3rem;
-          &:hover {
-            color: $themeColor;
-            border-bottom: 3px solid $themeColor;
+      align-items: center;
+      justify-content: center;
+
+      div.filter {
+        background-color: rgba(0, 0, 0, 0.4);
+        width: 100%;
+        min-height: 70vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+      }
+
+      h3 {
+        color: white;
+        font-size: 2.5rem;
+        text-align: center;
+      }
+    }
+
+    section.info-circles {
+      background-color: white;
+      padding: 2rem 1rem;
+      h3 {
+        text-align: center;
+        font-size: 2rem;
+      }
+
+      div.circles {
+        padding: 1rem;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+        div.circle {
+          padding: 1rem;
+          flex: 0 1 250px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          img {
+            width: 80%;
+            border-radius: 50%;
+            transition: all 0.1 ease-in;
+            padding: 0.5rem;
+            &:hover {
+              border: 3px solid $themeColor;
+            }
+          }
+        }
+      }
+    }
+
+    section.empty-container {
+      min-height: 70vh;
+      background-color: rgba(0, 0, 0, 0.7);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      h3 {
+        font-size: 2rem;
+        color: white;
+      }
+    }
+
+    section.google-map {
+      background-color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+
+      h3 {
+        font-size: 2.5rem;
+      }
+
+      p {
+        font-size: 1.25rem;
+        padding: 1rem;
+      }
+
+      iframe {
+        width: 100%;
+        height: 40vh;
+      }
+    }
+  }
+
+  footer {
+    display: flex;
+    padding: 2rem;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.3);
+
+    section.logo {
+      img {
+        width: 20vw;
+      }
+      h3 {
+        font-size: 2.5rem;
+        text-align: center;
+      }
+    }
+
+    section.links {
+      margin-top: 2rem;
+      a {
+        img {
+          width: 5vh;
+          margin: 0rem 1rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    header {
+      section.logo {
+        flex-direction: column;
+        img {
+          width: 50vw;
+          height: 50vw;
+        }
+      }
+      nav {
+        ul {
+          flex-direction: column;
+          li {
+            padding: 0.5rem 0.25rem;
           }
         }
       }
@@ -56,35 +223,22 @@ header {
   }
 }
 
-main {
-  section.background-img {
-    // 設定背景圖片
-    min-height: 70vh;
-    background-image: url("../images/日本櫻花.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    transition: all 0.75s ease;
-    position: relative;
-    z-index: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
 
-    div.filter {
-      background-color: rgba(0, 0, 0, 0.4);
-      width: 100%;
-      min-height: 70vh;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
 
-    h3 {
-      color: white;
-      font-size: 2.5rem;
-      text-align: center;
-    }
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $themeColor;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(84, 2, 84);
 }
